activity set up but nothing added to database yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
         <item>Never</item>
     </string-array>
     <string name="title_activity_controbute_to_database">ControbuteToDatabaseActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_database_contribution">DatabaseContributionActivity</string>
 </resources>
